crates/px4/tests/trybuild/fail/self_param.rs
use px4::main;

struct S;

impl S {
    #[main]
    fn entry(self) {}
}

fn main() {}
